UI fixes
User profile - save button appears below form

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1665,7 +1665,6 @@ article.list {
     flex-grow: 1;
     > .row {
         display: flex;
-        flex-grow: 1;
         align-content: flex-start;
         overflow: auto;
     }
